test/bad/foreach_not_array.lat
int main() {
    string s;
    for (int a : s) {
    }
    return 0;
}
